# avymail

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE  README.md  api.py  avalanche.py  fly.toml  mailtemplate.html  pyproject.toml  s3records.py  send-avymail.py
.github/: FUNDING.yml
.github/workflows/: pages-deploy.yml  send-emails.yml
scripts/: testzones.py
terraform/: aws-ses-notifications.tf
web/: app.js  index.html  unsubscribe.html
zone_backup/: compare_zones.py  zones_11_27_23.geojson  zones_3_4_24.geojson
